Manifests kubernetes/manifests/mysql-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: wp-mysql
  namespace: wordpress
spec:
  selector:
    app: wordpress
    tier: backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
